--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "fti-js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "A lightweight fulltext indexer based on lunr.js.",
-  "main": "./index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "clean": "rm -rf lib",
-    "build": "mkdir -p lib && coffee -o lib src/*.coffee",
-    "build_doc": "node_modules/.bin/codo src/",
+    "clean": "rimraf lib build es coverage",
+    "build:coffee": "mkdir -p lib && coffee -o lib src/*.coffee",
+    "build": "npm run build:coffee",
+    "doc": "node_modules/.bin/codo src/",
     "prepublish": "npm run clean && npm run build",
     "test": "node_modules/.bin/mocha --recursive --compilers coffee:coffee-script/register",
-    "coverage": "node_modules/.bin/mocha --recursive --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul",
-    "coverageReport": "node_modules/.bin/istanbul report"
+    "coverage:build": "node_modules/.bin/mocha --recursive --compilers coffee:coffee-script/register --require coffee-coverage/register-istanbul",
+    "coverage:report": "node_modules/.bin/istanbul report",
+    "coverage": "npm run coverage:build && npm run coverage:report"
   },
   "repository": {
     "type": "git",
@@ -34,9 +36,9 @@
     "coffee-coverage": "^1.0.1",
     "coffee-script": "^1.11.1",
     "istanbul": "^0.4.5",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "rimraf": "^2.5.4"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "peerDependencies": {}
 }
